force-app/main/default/objects/Sequence__c/Sequence__c.object-meta.xml
<CustomObject>
    <label>Sequence</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>