force-app/main/default/objects/Sequence__c/fields/Default_Start_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Start_Days__c</fullName>
    <description>The number of days to default the sequence start date after the first run date.</description>
    <inlineHelpText>The number of days to default the sequence start date after the first run date.</inlineHelpText>
    <label>Default Start Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>