force-app/main/default/objects/Sequence__c/fields/Nbr_Emps_Low__c.field-meta.xml
<CustomField>
    <fullName>Nbr_Emps_Low__c</fullName>
    <label>Nbr Emps Low</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>