force-app/main/default/objects/Sequence__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordType Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>