force-app/main/default/objects/Sequence__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordType Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>