force-app/main/default/objects/Sequence__c/fields/Start_Week__c.field-meta.xml
<CustomField>
    <fullName>Start_Week__c</fullName>
    <description>The week after the Sequence Start Date that the sequence started. If -1, sequence starts before the Sequence Start Date. Week 1 starts on the Sequence Start Date.</description>
    <inlineHelpText>The week after the Sequence Start Date that the sequence started. If -1, sequence starts before the Sequence Start Date. Week 1 starts on the Sequence Start Date.</inlineHelpText>
    <label>Start Week</label>
    <summarizedField>Sequence_Detail__c.Week_Start__c</summarizedField>
    <summaryForeignKey>Sequence_Detail__c.Sequence__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>