force-app/main/default/objects/Sequence__c/fields/Valid_Group__c.field-meta.xml
<CustomField>
    <fullName>Valid_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>