force-app/main/default/objects/Sequence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>RecordTypeName__c</columns>
    <columns>Nbr_Emps_Low__c</columns>
    <columns>Nbr_Emps_High__c</columns>
    <columns>Default_Start_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>